feat: add GetSubscription endpoint
