# internal/docs/swagger.yaml
@@ -15,8 +15,6 @@ definitions:
     type: object
   models.SubscriptionResponse:
     properties:
-      created_at:
-        type: string
       end_date:
         type: string
       id:
@@ -26,8 +24,6 @@ definitions:
       service_name:
         type: string
       start_date:
-        type: string
-      updated_at:
         type: string
       user_id:
         type: string
@@ -66,6 +62,37 @@ paths:
               type: string
             type: object
       summary: Create subscription
+      tags:
+      - subscriptions
+  /api/subscriptions/{id}:
+    get:
+      description: Возвращает запись по её ID
+      parameters:
+      - description: Subscription ID (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SubscriptionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get subscription by id
       tags:
       - subscriptions
 schemes:
